refactor: adjust method inferring
